<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidphotosapp.photosandroidapp.Slideshow">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/backwardBtn"
        android:layout_toLeftOf="@id/forwardBtn"
        android:contentDescription="@string/desc"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/image_one"/>

    <Button
        android:id="@+id/backwardBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="10dp"
        android:background="@android:color/transparent"
        android:text="@string/backbtntxt"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/forwardBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="140dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/transparent"
        android:text="@string/fwdbtntxt"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relativeLayoutForAddTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView">

        <model.CustomSpinner
            android:id="@+id/addTagOptions"
            android:layout_width="130dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/addTagValue"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/addTagOptions"
            android:hint="@string/tagValueName"
            android:inputType="text"/>


        <Button
            android:id="@+id/addTagButtonSlideshow"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/addTagValue"
            android:background="@android:color/transparent"
            android:text="@string/addButtonName"
            android:textColor="#000000"
            android:textSize="30sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/deleteTagButtonSlideshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/addTagButtonSlideshow"
            android:background="@android:color/transparent"
            android:text="Delete Tag"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="visible" />




    </RelativeLayout>

    <ListView
        android:id="@+id/tagsOfPhotoSlideshow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/relativeLayoutForAddTag"
        android:layout_marginLeft="40dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/background_light"
        android:text="TextView"
        android:textColor="@android:color/background_dark" />

</RelativeLayout>
