<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidphotosapp.photosandroidapp.SearchPage">

    <RelativeLayout
        android:id="@+id/relativeLayoutForSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="5dp">

        <model.CustomSpinner
            android:id="@+id/searchOptions"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/addTagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagValue"
            android:text="@string/addButtonName"
            android:textSize="14sp" />

        <AutoCompleteTextView
            android:id="@+id/tagValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/searchOptions"
            android:completionThreshold="1"
            android:hint="Enter a tag" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutForTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayoutForSearch"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tagsEnteredList"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="@string/tagsEnteredListHeader"
            android:textSize="16sp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagsEnteredList"
            android:text="@string/searchButtonName"
            android:visibility="invisible" />
    </RelativeLayout>

    <GridView
        android:id="@+id/searchedPhotosGridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayoutForTags"
        android:columnWidth="120dp"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth" />

</RelativeLayout>